--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,9 +51,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
   restart-docker-compose:
     runs-on: ubuntu-latest
-    needs: build-deploy
+    needs: build-publish
     steps:
       - name: Run remote script with SSH
         uses: appleboy/ssh-action@v1.0.3
